# winhidapi

./: .gitignore  README.md
msvc/winhidapi/: winhidapi.sln  winhidapi.vcxproj  winhidapi.vcxproj.filters
src/: CMakeLists.txt  LICENSE.txt  winhidapi.cpp
